# eve-engine

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.cmake  LICENSE  README.md  TODOS.md
assets/scenes/: checkerboard_scene.eve
assets/shaders/: camera_data.glsl  default.frag  default.vert  default_output.glsl  directional_light.glsl  line.frag  line.vert  line_output.glsl  material.glsl  output.glsl  pbr.frag  sky_box.frag
cmake/: CMakeOptions.cmake  ModuleHelpers.cmake  glslc-compiler.cmake  header-expose.cmake  module-helpers.cmake
docs/: CODE_STYLE.md
editor/: CMakeLists.txt  editor.cc  pch.h
editor/cmd/: CMakeLists.txt  main.cc
editor/layers/: editor_layer.cc  editor_layer.h
editor/modals/: exit_modal.cc  exit_modal.h  importer_modal.cc  importer_modal.h  modal.cc  modal.h
editor/panels/: about_panel.cc  about_panel.h  asset_registry_panel.cc  asset_registry_panel.h  console_panel.cc  console_panel.h  content_browser_panel.cc  content_browser_panel.h  debug_info_panel.cc  debug_info_panel.h  hierarchy_panel.cc  hierarchy_panel.h  inspector_panel.cc  inspector_panel.h  panel.cc  panel.h  project_settings_panel.cc  project_settings_panel.h  render_stats_panel.cc  render_stats_panel.h  scene_settings_panel.cc  scene_settings_panel.h  toolbar_panel.cc  toolbar_panel.h  viewport_panel.cc  viewport_panel.h
editor/utils/: cpuid.cc  cpuid.h  imgui_utils.cc  imgui_utils.h  modify_info.h
editor/widgets/: combo.cc  combo.h  dock_space.cc  dock_space.h  menu_bar.cc  menu_bar.h
engine/: CMakeLists.txt  pch_shared.h
engine/asset/: CMakeLists.txt  asset.cc  asset.h  asset_library.cc  asset_library.h  asset_library.inl  asset_loader.cc  asset_loader.h  asset_registry.cc  asset_registry.h
engine/asset/tests/: asset_registry_tests.cc
engine/core/: CMakeLists.txt  buffer.cc  buffer.h  color.h  core_minimal.h  file_system.cc  file_system.h  foo.cc  foo.h  instance.cc  instance.h  layer.cc  layer.h  layer_stack.cc  layer_stack.h  state.h  uuid.cc  uuid.h  window.cc  window.h
engine/core/debug/: assert.h  instrumentor.cc  instrumentor.h  instrumentor.inl  log.cc  log.h
engine/core/event/: event_handler.h  event_handler.inl  events.h  input.cc  input.h  key_code.cc  key_code.h  key_event.h  mouse_code.cc  mouse_code.h  mouse_event.h  window_event.h
engine/core/math/: box.h  transform.cc
engine/core/serialization/: ini_parser.cc  ini_parser.h  ini_parser.inl
engine/core/tests/: buffer_tests.cc  file_system_tests.cc  layer_tests.cc
engine/core/utils/: functional.h  guuid.cc  guuid.h  memory.h  memory.inl  timer.cc  timer.h
engine/graphics/: CMakeLists.txt  buffer_layout.cc  buffer_layout.h  camera.h  frame_buffer.cc  frame_buffer.h  graphics.h  graphics_context.cc  graphics_context.h  index_buffer.cc  index_buffer.h  material.cc  material.h  orthographic_camera.cc  orthographic_camera.h  perspective_camera.cc  perspective_camera.h  render_command.cc  render_command.h  renderer.cc  renderer.h  renderer_api.cc  renderer_api.h  scene_renderer.cc  scene_renderer.h  shader.cc  shader.h  shader_compiler.cc  shader_compiler.h  skybox.cc  skybox.h  texture.cc  texture.h  uniform_buffer.cc  uniform_buffer.h  vertex.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h
engine/graphics/primitives/: cube.cc  cube.h  line.cc  line.h  mesh.cc  mesh.h  primitive.h  quad.cc  quad.h
engine/graphics/shaders/: default.frag  default.vert  helper.glsl
engine/launch/: CMakeLists.txt  guarded_main.cc  prelude.h
engine/launch/platform/: linux_main.cc  linux_main.h  win32_main.cc  win32_main.h
engine/physics/: CMakeLists.txt  box_collider.cc  box_collider.h  collider.h  physics_system.cc  physics_system.h  physics_world.cc  physics_world.h  rigidbody.cc  rigidbody.h
engine/project/: CMakeLists.txt  project.cc  project.h  project_serializer.cc  project_serializer.h
engine/runtime/: CMakeLists.txt  instance.cc  instance.h  prelude.h
engine/runtime/launch/: guarded_main.cc  guarded_main.h  linux_main.cc  linux_main.h  win32_main.cc  win32_main.h
engine/scene/: CMakeLists.txt  components.h  editor_camera.cc  editor_camera.h  entity.cc  entity.h  lights.h  model.cc  model.h  scene.cc  scene.h  scene_manager.cc  scene_manager.h  scene_serializer.cc  scene_serializer.h  static_mesh.cc  static_mesh.h  system.cc  system.h  transform.cc  transform.h
engine/scripting/: CMakeLists.txt  annotation_parser.cc  annotation_parser.h  engine_api.cc  engine_api.h  preprocessor.cc  preprocessor.h  script.cc  script.h  script_engine.cc  script_engine.h  script_glue.cc  script_glue.h
engine/ui/: CMakeLists.txt  imgui_layer.cc  imgui_layer.h  imgui_utils.cc  imgui_utils.h  modal.cc  modal.h  panel.cc  panel.h
programs/: CMakeLists.txt
programs/project_manager/: CMakeLists.txt  main.cc  ui_layer.cc  ui_layer.h
programs/shader_compiler/: CMakeLists.txt  README.md
programs/shader_compiler/cmake/: shader-compiler.cmake
programs/shader_compiler/include/: compiler.h
programs/shader_compiler/src/: compiler.cc  main.cc
runtime/: CMakeLists.txt  runtime.cc  runtime_layer.cc  runtime_layer.h
samples/multiple_scenes/: multiple_scenes.eproj  multiple_scenes.eproject
samples/simple/: .gitignore  simple.eproj  simple.eproject
script-core/: CMakeLists.txt
script-core/EveEngine/: Camera.cs  Components.cs  Entity.cs  Input.cs  InternalCalls.cs  Mathf.cs  MouseCode.cs  SceneManager.cs  ScriptEntity.cs  Transform.cs  Vector2.cs  Vector3.cs  Vector4.cs
script-core/src/: Camera.cs  Color.cs  Components.cs  InternalCalls.cs  KeyCode.cs  Vector4.cs
script_core/: Application.cs  CMakeLists.txt  Camera.cs  Color.cs  Debug.cs  Entity.cs  Exceptions.cs  Input.cs  Interop.cs  KeyCode.cs  Mathf.cs  MouseCode.cs  Rigidbody.cs  SceneManager.cs  Transform.cs  Vector2.cs  Vector3.cs  Vector4.cs  Window.cs
script_core/Components/: BoxCollider.cs  CameraComponent.cs  Component.cs  Material.cs  Rigidbody.cs  ScriptComponent.cs  Transform.cs
templates/: Script.cs.template  custom_shader.esh.template
(+27 files in other folders)
